--- a/ch2_线代.org
+++ b/ch2_线代.org
@@ -17,6 +17,7 @@
 - 矩阵数乘
 本书中允许矩阵和向量相加，矩阵A加向量b也就是把向量b加到A的每一列上去（numpy的广播）。
 
+
 * 矩阵乘法
 C=AB, A矩阵的列数必须等于B的行数
 C的第i行j列的元素，为A的第i行乘以B的第j列
@@ -38,6 +39,7 @@ C的第i行j列的元素，为A的第i行乘以B的第j列
 
 注意，在数值求解上述线性方程组的时候，通常不直接求A^{-1}，这是因为
 逆矩阵在数字计算机上只能表现出有限精度，而有效利用向量b的算法可以得到更精确的x。
+
 
 * 线性相关&生成子空间
 线性方程组可能没有解，也可能有1个或者无穷多个解（但不会是其他情况，比如2个解，或者5个解）
@@ -71,7 +73,6 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 因此，要保证方程有唯一一组解，A需为一个方阵，且其维度也为m，且列向量线性无关(非奇异)。
 
 
-
 * 范数
 范数norm用于衡量向量的大小（距离原点的距离）。
 
@@ -90,6 +91,8 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 对角阵求逆（和矩阵乘积）非常容易。
 
 对称矩阵是转置与自身相等的方阵。
+当某些不依赖参数顺序的双参数函数生成元素时，对称矩阵经常出现。
+如距离度量矩阵、协方差矩阵等。
 
 单位向量||x||=1
 
@@ -98,3 +101,63 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 （注意，方阵的左逆和右逆总是相等。）
 
 注意，对于向量两两正交，但不是单位向量的方阵，没有专有术语。。
+
+
+* 特征分解
+可以通过分解矩阵，来发现矩阵表现为数组时不明显的性质。
+/特征分解/是应用最广的方阵分解之一，它将方阵分解为特征向量和特征值。
+方阵A的特征向量，是与A相乘后相当于对该向量进行缩放的非零向量，即~Av=kv~
+其中，v是向量，k是标量。
+
+注意，根据前面从线性方程组获得的理解，Av实际是A的向量组根据v做的一种线性表出。
+对于任意向量v，Av将得到另一个向量。因此，也可以视A为一种变换。
+比如，将A的向量看作一组基（坐标轴），那么Av就是该向量在这组基上的表示（坐标变换）。
+这里的特征向量是，在该坐标变化下，方向不变的向量。
+
+通常只考虑右特征向量，且只考虑单位特征向量。
+
+不是每个矩阵都可以分解为特征值和特征向量。
+幸运的是，本书通常只分解一类有简单分解的矩阵——实对称矩阵，它们可以分解为~A=QWQ^{T}~
+其中Q是A的特征向量组成的正交矩阵，W是特征值（在主对角线上）组成的对角矩阵。
+
+当且仅当所有特征值都唯一时，矩阵的特征分解唯一。
+
+- 矩阵是奇异的，当且仅当矩阵有0特征值。
+- 所有特征值都为正（负）的矩阵，称为正定（负定）矩阵。
+- 所有特征值都非负（非正）的矩阵，称为半正定（半负定）矩阵。
+
+实对称矩阵的特征分解可以用于优化二次方程~f(x)=x^{T}Ax~，其中x的范数限制为1。
+当x等于A的某个特征向量时，f将返回对应的特征值。
+在范数限制条件下，函数f的最大（最小）值是最大（最小）特征向量。
+
+半正定矩阵受关注，是因为对于人员的向量x，有~x^{T}Ax>=0~。
+对于正定矩阵，还保证~x^{T}Ax=0 => x=0~。
+
+
+* 奇异值分解
+通过奇异值分解，可以获得与特征分解同类型的信息。
+但奇异值分解应用更广，每个实矩阵都有一个奇异值分解。
+
+~A=UDV^{T}~, 其中U、V均为正交矩阵，矩阵D为对角阵。
+假设A为mxn维，则U、D、V分别为mxm, mxn, nxn维。
+
+
+* Moore-Penrose伪逆
+A不是方阵时，Ax=b解的性质不定，且不能尝试利用逆矩阵求解。
+
+定义伪逆为~A^{+}=VD^{+}U^{T}~，其中U、D、V是矩阵A的奇异分解得到的。
+对角阵D的伪逆D^{+}为其非零元素取倒数，然后做矩阵转置得到的。
+
+当矩阵A的列数多于行数时，伪逆求解（x=A^{+}y）是所有可行解中范数最小的一个。
+当矩阵A的列数少于行数时，伪逆得到的x（=A^{+}y）可以使Ax与y的欧式距离最小。
+
+
+* 迹
+矩阵对角元素之和
+
+
+* 行列式
+方阵A的行列式det(A)等于A的特征值之积。
+行列式的绝对值可用于衡量矩阵参与乘法之后（坐标变换后），空间扩大或缩小了多少。
+
+若行列式为0，则空间至少沿某一维完全收缩了；若行列式为1，则该变换保持空间体积不变。
