github cannot process tilde, too bad

--- a/ch2_线代.org
+++ b/ch2_线代.org
@@ -106,7 +106,7 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 * 特征分解
 可以通过分解矩阵，来发现矩阵表现为数组时不明显的性质。
 /特征分解/是应用最广的方阵分解之一，它将方阵分解为特征向量和特征值。
-方阵A的特征向量，是与A相乘后相当于对该向量进行缩放的非零向量，即~Av=kv~
+方阵A的特征向量，是与A相乘后相当于对该向量进行缩放的非零向量，即Av=kv
 其中，v是向量，k是标量。
 
 注意，根据前面从线性方程组获得的理解，Av实际是A的向量组根据v做的一种线性表出。
@@ -117,7 +117,7 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 通常只考虑右特征向量，且只考虑单位特征向量。
 
 不是每个矩阵都可以分解为特征值和特征向量。
-幸运的是，本书通常只分解一类有简单分解的矩阵——实对称矩阵，它们可以分解为~A=QWQ^{T}~
+幸运的是，本书通常只分解一类有简单分解的矩阵——实对称矩阵，它们可以分解为A=QWQ^{T}
 其中Q是A的特征向量组成的正交矩阵，W是特征值（在主对角线上）组成的对角矩阵。
 
 当且仅当所有特征值都唯一时，矩阵的特征分解唯一。
@@ -126,26 +126,26 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 - 所有特征值都为正（负）的矩阵，称为正定（负定）矩阵。
 - 所有特征值都非负（非正）的矩阵，称为半正定（半负定）矩阵。
 
-实对称矩阵的特征分解可以用于优化二次方程~f(x)=x^{T}Ax~，其中x的范数限制为1。
+实对称矩阵的特征分解可以用于优化二次方程f(x)=x^{T}Ax，其中x的范数限制为1。
 当x等于A的某个特征向量时，f将返回对应的特征值。
 在范数限制条件下，函数f的最大（最小）值是最大（最小）特征向量。
 
-半正定矩阵受关注，是因为对于人员的向量x，有~x^{T}Ax>=0~。
-对于正定矩阵，还保证~x^{T}Ax=0 => x=0~。
+半正定矩阵受关注，是因为对于人员的向量x，有x^{T}Ax>=0。
+对于正定矩阵，还保证x^{T}Ax=0 => x=0。
 
 
 * 奇异值分解
 通过奇异值分解，可以获得与特征分解同类型的信息。
 但奇异值分解应用更广，每个实矩阵都有一个奇异值分解。
 
-~A=UDV^{T}~, 其中U、V均为正交矩阵，矩阵D为对角阵。
+A=UDV^{T}, 其中U、V均为正交矩阵，矩阵D为对角阵。
 假设A为mxn维，则U、D、V分别为mxm, mxn, nxn维。
 
 
 * Moore-Penrose伪逆
 A不是方阵时，Ax=b解的性质不定，且不能尝试利用逆矩阵求解。
 
-定义伪逆为~A^{+}=VD^{+}U^{T}~，其中U、D、V是矩阵A的奇异分解得到的。
+定义伪逆为A^{+}=VD^{+}U^{T}，其中U、D、V是矩阵A的奇异分解得到的。
 对角阵D的伪逆D^{+}为其非零元素取倒数，然后做矩阵转置得到的。
 
 当矩阵A的列数多于行数时，伪逆求解（x=A^{+}y）是所有可行解中范数最小的一个。
