add chap3.1; and minor fix on preious contents

--- a/ch1_引言.org
+++ b/ch1_引言.org
@@ -24,14 +24,14 @@
 控制论 -> 联接主义 -> 深度学习
 
 现代的深度学习诉诸于学习多层次组合这一更普遍原理。
-将雪貂的视觉信号传递到听觉皮层，它们会学会用听皮层去`看`。
+将雪貂的视觉信号传递到听觉皮层，它们会学会用听皮层去\看\。
 这意味着，大脑中单一算法可以解决不同的任务。
 深度学习的研究团队也往往同时研究自然语言，计算机视觉，运动规划，语音识别等不同领域。
 
-关于`计算神经学`..
+关于\计算神经学\..
 
 
-联接主义的一个概念是分布式表示，使用红/绿、汽车/鸟等的组合去描述红汽车、绿鸟等。
+联接主义的一个概念是分布式表示，使用红/绿、汽车/鸟等的组合去描述红汽车、绿鸟等。分布式表示的概念是本书的核心。
 
 联接主义的另一个成就是误差反传。它至今仍是深度模型的主导方法。
 
