--- a/ch2_线代.org
+++ b/ch2_线代.org
@@ -161,3 +161,8 @@ A不是方阵时，Ax=b解的性质不定，且不能尝试利用逆矩阵求解
 行列式的绝对值可用于衡量矩阵参与乘法之后（坐标变换后），空间扩大或缩小了多少。
 
 若行列式为0，则空间至少沿某一维完全收缩了；若行列式为1，则该变换保持空间体积不变。
+
+
+* PCA
+按我之前的理解，PCA主要是通过计算协方差矩阵的特征系统，计算并选择出最具代表性的少数几列属性。
+这本书显然是从另一个角度理解的（给定限定条件下的最小误差重构？），篇幅较长，想必很有意思，稍后再看。
