--- a/ch2_线代.org
+++ b/ch2_线代.org
@@ -85,6 +85,8 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 
 最大范数/无穷范数定义为向量中最大幅值元素的绝对值。
 
+有时也希望衡量矩阵的大小。矩阵的Frobenius范数，定义为矩阵各元素平方和的二次方根。
+
 
 * 特殊矩阵和向量
 对角矩阵只在主对角线有非零值，其他元素全是零（不要求为方阵）。
