--- a/ch2_线代.org
+++ b/ch2_线代.org
@@ -94,7 +94,7 @@ A有m列是必要条件，但并不充分——不能保证方程对每一个点
 
 对称矩阵是转置与自身相等的方阵。
 当某些不依赖参数顺序的双参数函数生成元素时，对称矩阵经常出现。
-如距离度量矩阵、协方差矩阵等。
+如距离度量矩阵、协方差矩阵等。对称矩阵的特征向量两两正交。
 
 单位向量||x||=1
 
