fix multi-enumerate issues

--- a/ch2_线代.org
+++ b/ch2_线代.org
@@ -3,8 +3,8 @@
 
 - 标量  整数、实数等
 - 向量  一列有序的标量
-+ （一维数组；可看作是空间中的点，每个元素是不同坐标轴上的坐标;
-+   后文中列向量和向量完全等价，这里没有行向量这种东西）
+    + （一维数组；可看作是空间中的点，每个元素是不同坐标轴上的坐标;
+    + 后文中列向量和向量完全等价，这里没有行向量，只有列向量的转置）
 - 矩阵  若干个有序横排的同维向量 （二维数组）
 - 张量  本书中指高维数组
 
