fix a multi-level title issue

--- a/ch3_概率.org
+++ b/ch3_概率.org
@@ -35,7 +35,7 @@
 概率分布用于描述随机变量或一组随机变量在每一个可能取到状态的可能性的大小。
 概率分布的描述方式取决于随机变量是连续的还是离散的。
 
-- 离散随机变量和概率质量函数PMF
+** 离散随机变量和概率质量函数PMF
 读者通常需根据随机变量来推断所使用的PMF，而不是根据PMF的函数名。
 PMF将随机变量能取到的每个状态映射到随机变量取得该状态的概率。
 PMF写为P(x=a)或简写为P(a)，其中x为随机变量，a为x可能取到的一个状态。
@@ -49,7 +49,7 @@ PMF需同时满足
 - 0 <= P(a) <= 1
 - 归一化条件
 
-- 连续随机变量和概率密度函数PDF
+** 连续随机变量和概率密度函数PDF
 PDF函数p(x)不直接给出特定状态的概率，相对的，它给出了落在面积为dx的无限小区域内的概率：p(x)dx。
 可以通过对PDF求积分来获得点集的真实概率质量。
 
