minor fix ch5.1,5.2

--- a/ch5_ML基础.org
+++ b/ch5_ML基础.org
@@ -34,7 +34,7 @@ ML可以解决很多类型的任务，
 
 
 ** 示例：线性回归
-对每个输入的测试记录，对其各个特征做线性组合（各维分别乘以权重），以估计其目标值（标签）。
+对每个输入的测试记录，对其各个特征做线性组合（各维分别乘以权重，然后求和），以估计其目标值（标签）。
 这里，用均方误差度量模型的性能。
 
 通过把误差函数对权重求偏导，求得临界点（极小值）处的权重向量。
@@ -48,13 +48,12 @@ ML可以解决很多类型的任务，
 其中，m为训练集中样本的个数。
 
 模型训练时，我们的目标是使E_{train}尽可能地小。
-上面式子可以看出，E是正定的，直接求其临界点即为最小点:
+上面式子可以看出，E是正定的，直接求其临界点即可:
 - ∇_{w}E_{train} = 0  # 求E对w的临界点，要求的是w
 - ∇_{w}\sum_{i=1..m}(\hat{y}_{i}-y_{i})^{2} /m = 0  # 代入
 - ∇_{w}\sum_{i=1..m}(\hat{y}_{i}-y_{i})^{2} = 0  # 消除因子
-- ∇_{w}(\hat{y}-y)^{2} = 0  # 写为向量形式
-- ∇_{w}(Xw-y)^{2} = 0  # X是宽表，不用转置
-- ∇_{w}(Xw-y)^{T}(Xw-y) = 0  # 转换为标准二次型形式
+- ∇_{w}(\hat{y}-y)^{T}(\hat{y}-y) = 0  # 写为向量形式
+- ∇_{w}(Xw-y)^{T}(Xw-y) = 0  # 代入
 - ∇_{w}((Xw)^{T}-y^{T})(Xw-y) = 0
 - ∇_{w}((Xw)^{T}Xw-2y^{T}Xw+y^{T}y) = 0 # 注意，括号内为标量
 - 2X^{T}Xw-2y^{T}X = 0
@@ -64,7 +63,7 @@ ML可以解决很多类型的任务，
 
 
 *  泛化能力
-优化不同的是，ML中我们希望泛化误差尽可能地小（测试集等等未观测到的数据集上的误差）。
+与优化不同的是，ML中我们希望泛化误差尽可能地小（测试集等尚未观测到的数据集上的误差）。
 
 当我们只用训练集训练模型时，如何才能影响到测试集上的性能？独立同分布假设。
 （两个数据集中的样本是互相独立的，并且两个数据集同分布）。
@@ -95,7 +94,7 @@ ML可以解决很多类型的任务，
 
 ** 没有银弹
 没有一个ML算法，在所有可能的数据分布上，都比其他的ML算法好。
-（在考虑所有的数据分布后，所有的ML算法都一样好。）
+（在考虑所有的数据分布后，所有的ML算法都一样好/一样糟。）
 
 ** 正则化
 正则化是修改ML算法，使其泛化误差降低（而非训练误差）。
